Bug 257985 - kmail add favorite Folder doesn't work
Summary: kmail add favorite Folder doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 2.0.89
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-26 16:17 UTC by Sascha Manns
Modified: 2010-12-24 12:59 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sascha Manns 2010-11-26 16:17:36 UTC
Version:           SVN trunk (KDE 4) (using KDE 4.5.80) 
OS:                Linux

V: 2.0.89

In the folder view of KMail i can't add a new Folder. The extra Menue comes, i can choose a folder, but the new selected Folder doesn't visible

Reproducible: Always

Steps to Reproduce:
Click with the right Mousetap on the Favorite Folder Place, and select "Add favorite Folder". After OK nothing happens

Actual Results:  
No visible new selected folder

Expected Results:  
visible new selected fodler.
Comment 1 Laurent Montel 2010-11-27 15:05:30 UTC
kmail 2
Comment 2 Anne-Marie Mahfouf 2010-12-05 19:52:08 UTC
Works here! Maybe you can update to beta2 and see if you can still reproduce.
But when I added folders to Favorites I can't remove them...
Comment 3 Thiago Macieira 2010-12-07 12:56:05 UTC
I had this problem. It's caused by the migrator tool copying the settings from old kmail1, but not the folders themselves. When faced with unknown folders, nothing is shown.

Edit kmail2rc and remove the folders listed there.
Comment 4 Laurent Montel 2010-12-07 13:52:26 UTC
So if we have unknow folders, folder doesn't work even if we add new folder ?
It"s a big pb in favorite folder view.
Comment 5 Thiago Macieira 2010-12-07 14:20:56 UTC
That is correct. The favourite folder shows nothing at all, which means that adding a folder has no visible result, either via dragging or via Right Click -> Add to Favourites.

If you try to re-add a folder that you've already added, you get a "can't drop" icon and the menu entry in the RMB menu disappears.
Comment 6 Henning Becker 2010-12-07 14:27:04 UTC
Cleaning favorite folder list in kmail2rc works great here!

Now I can add and remove favorite folders to/from list.
Comment 7 Laurent Montel 2010-12-07 14:36:34 UTC
dnd doesn't work. It's a know bugs.
but it's a very bad bug that favorite folder view doesn't work when we have unknown folder.
We need to fix it quickly.
Comment 8 Tobias Koenig 2010-12-12 01:18:21 UTC
SVN commit 1205649 by tokoe:

Do not stop showing favorite collections if the config
file contains out-dated favorite entries.

BUG: 257985


 M  +5 -6      favoritecollectionsmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205649
Comment 9 Volker Krause 2010-12-24 12:59:35 UTC
DND has been fixed in revision 1208114 btw.