Do not stop showing favorite collections if the config file contains out-dated favorite entries.

BUG: 257985

svn path=/trunk/KDE/kdepimlibs/; revision=1205649